Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
 <span class="p">});</span>
 </pre></div>
 
+<p><strong>you can even bind multiple plugins on the same element</strong></p>
+
+<div class="highlight highlight-html"><pre><span class="nt">&lt;input</span> <span class="na">type=</span><span class="s">"text"</span> <span class="na">placeholder=</span><span class="s">"country lookup"</span> <span class="na">data-plugin=</span><span class="s">"placeholder: {}, autocomplete: { source: [ 'Jordan', 'Syria', 'Egypt', 'Palestine', 'Turkey' ] }"</span> <span class="nt">/&gt;</span>
+</pre></div>
+
 <h3>
 <a name="why" class="anchor" href="#why"><span class="octicon octicon-link"></span></a>Why</h3>
 
